--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,6 +1,6 @@
 use_frameworks!
 target 'TVDB_Tests' do
+  platform :osx, '10.11'
+  inherit! :search_paths
   pod 'TVDB', :path => '../'
-  
-  
 end
