--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,11 @@
 # * http://www.objc.io/issue-6/travis-ci.html
 # * https://github.com/supermarin/xcpretty#usage
 
-osx_image: xcode7.3
+osx_image: xcode9
 language: objective-c
-# cache: cocoapods
-# podfile: Example/Podfile
-# before_install:
-# - gem install cocoapods # Since Travis is not always on latest version
-# - pod install --project-directory=Example
+
+before_install:
+- bash setup.sh
+- git remote set-url origin "https://${GITHUB_TOKEN}@github.com/pietrocaselani/TVDB-Swift.git"
 script:
-- set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/TVDB.xcworkspace -scheme TVDB-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
-- pod lib lint
+- bash ci/travis.sh
