Exclude `vendor` folder from sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.swift.swiftlint.report=./reports/*swiftlint.txt
 sonar.projectName=TVDB-Swift
 sonar.projectKey=io.github.pietrocaselani.tvdbswift
 sonar.sources=.
-sonar.exclusions=Example/Pods/**
+sonar.exclusions=Example/Pods/**,vendor/**
 sonar.swift.project=TVDB.xcodeproj
 sonar.swift.workspace=TVDB.xcworkspace
 sonar.sourceEncoding=UTF-8
